# MeshGenerator

./: .gitignore  CMakeLists.txt  README.md
data/: barrel.xyz  saddle.xyz  sphere.xyz
include/: file_manager.h  mesh.h  point.h  triangle.h
src/: CMakeLists.txt  file_manager.cpp  main.cpp  mesh.cpp  point.cpp  triangle.cpp
